added user#reviews endpoint
