# app/controllers/users_controller.rb
@@ -1,5 +1,5 @@
 class UsersController < ApplicationController
-  before_action :authenticate_user!, only: %i[show contributions]
+  before_action :authenticate_user!, only: %i[show contributions reviews]
   authorize_resource
 
   def show
@@ -16,6 +16,22 @@ class UsersController < ApplicationController
       serializer_klass: GestureSerializer,
       serializer_options: {
         include: %i[review word word.categories],
+        params: { include_preview: true }
+      },
+      page: page,
+      per_page: per_page
+    ).build_hash, status: :ok
+  end
+
+  def reviews
+    per_page = params[:per_page] || 5
+    page = params[:page] || 1
+
+    render json: PaginatedSerializableService.new(
+      records: current_user .reviews,
+      serializer_klass: ReviewSerializer,
+      serializer_options: {
+        include: %i[gesture gesture.word],
         params: { include_preview: true }
       },
       page: page,
